Updated the AudioAPI and ref

--- a/AudioPlayer.csproj
+++ b/AudioPlayer.csproj
@@ -88,7 +88,7 @@
     </Reference>
     <Reference Include="SCPSLAudioApi, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(EXILED_REFERENCES)\SCPSLAudioApi.dll</HintPath>
+      <HintPath>.\lib\SCPSLAudioApi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
