--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EXILEDOFFICIAL" version="8.11.0" targetFramework="net48" />
+  <package id="EXILED" version="8.9.11" targetFramework="net48" />
   <package id="LiteDB" version="5.0.21" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
 </packages>
