--- a/AudioPlayer.csproj
+++ b/AudioPlayer.csproj
@@ -25,7 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -33,8 +33,10 @@
     <LangVersion>default</LangVersion>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="API\SoundPlayer.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Mute.cs" />
     <Compile Include="PlayerRepository.cs" />
