--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -10,7 +10,7 @@ on:
     - main
   workflow_dispatch:
 env:
-  REFERENCES_URL: https://misaka-zerotwo.github.io/SL-References/Master.zip
+  REFERENCES_URL: https://exmod-team.github.io/SL-References/Master.zip
   EXILED_REFERENCES: ${{ github.workspace }}/References
 jobs:
   build:
