--- a/AudioPlayer.csproj
+++ b/AudioPlayer.csproj
@@ -39,11 +39,10 @@
   <ItemGroup>
     <Compile Include="API\SoundPlayer.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="Mute.cs" />
-    <Compile Include="PlayerRepository.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="PlaySound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
@@ -76,9 +75,6 @@
     </Reference>
     <Reference Include="Exiled.Permissions, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
       <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.Permissions.dll</HintPath>
-    </Reference>
-    <Reference Include="LiteDB, Version=5.0.21.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
-      <HintPath>packages\LiteDB.5.0.21\lib\net45\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="Mirror">
       <HintPath>$(EXILED_REFERENCES)\Mirror.dll</HintPath>
