--- a/AudioPlayer.csproj
+++ b/AudioPlayer.csproj
@@ -48,42 +48,45 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>$(EXILED_REFERENCES)\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Assembly-CSharp-Publicized.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(EXILED_REFERENCES)\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
-    <Reference Include="CommandSystem.Core">
-      <HintPath>$(EXILED_REFERENCES)\CommandSystem.Core.dll</HintPath>
+    <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\CommandSystem.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.API, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.API.dll</HintPath>
+    <Reference Include="Exiled.API, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.API.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CreditTags, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.CreditTags.dll</HintPath>
+    <Reference Include="Exiled.CreditTags, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.CreditTags.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CustomItems, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.CustomItems.dll</HintPath>
+    <Reference Include="Exiled.CustomItems, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.CustomItems.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CustomRoles, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.CustomRoles.dll</HintPath>
+    <Reference Include="Exiled.CustomRoles, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.CustomRoles.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Events, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.Events.dll</HintPath>
+    <Reference Include="Exiled.Events, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.Events.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Loader, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.Loader.dll</HintPath>
+    <Reference Include="Exiled.Loader, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.Loader.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Permissions, Version=9.3.0.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\Exiled.Permissions.dll</HintPath>
+    <Reference Include="Exiled.Permissions, Version=9.5.0.0, Culture=neutral, processorArchitecture=Amd64">
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\Exiled.Permissions.dll</HintPath>
     </Reference>
     <Reference Include="Mirror">
       <HintPath>$(EXILED_REFERENCES)\Mirror.dll</HintPath>
     </Reference>
     <Reference Include="NorthwoodLib, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\NorthwoodLib.dll</HintPath>
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\NorthwoodLib.dll</HintPath>
     </Reference>
     <Reference Include="PluginAPI, Version=13.1.5.0, Culture=neutral, processorArchitecture=Amd64">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\PluginAPI.dll</HintPath>
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\PluginAPI.dll</HintPath>
     </Reference>
     <Reference Include="SCPSLAudioApi, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -107,7 +110,7 @@
       <HintPath>$(EXILED_REFERENCES)\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
     <Reference Include="YamlDotNet, Version=11.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
-      <HintPath>packages\ExMod.Exiled.9.3.0\lib\net48\YamlDotNet.dll</HintPath>
+      <HintPath>packages\ExMod.Exiled.9.5.0\lib\net48\YamlDotNet.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
