--- a/App.config
+++ b/App.config
@@ -5,6 +5,10 @@
         <assemblyIdentity name="PluginAPI" publicKeyToken="null" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-13.1.5.0" newVersion="13.1.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NorthwoodLib" publicKeyToken="null" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.4.0.0" newVersion="1.4.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
